--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.1",
     "express": "^4.17.1",
-    "joi": "^14.3.1"
+    "helmet": "^3.23.0",
+    "joi": "^14.3.1",
+    "morgan": "^1.10.0"
   }
 }
