--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "fawn": "^2.1.5",
     "helmet": "^3.23.0",
     "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
+    "mongoose": "^5.9.19",
     "morgan": "^1.10.0"
   }
 }
