--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "fawn": "^2.1.5",
     "helmet": "^3.23.0",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0"
   }
