--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose --coverage"
+    "test": "jest --watchAll --verbose --coverage runinBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "winston": "^3.3.2",
